2010-10-25 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Drawable: Remove ambigous references to Rectangle for
	cross-compilation.
	
	* src/ogreGui/Container (compute): basic implementation.
	
	* src/client/gsmenubase.cpp: Removed some references to oldOgreGui.

2010-10-23 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmenubase.cpp (gsMenuBase): Set its own TexturePtr to
	its Container member.

2010-10-17 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Brush.cpp (drawRectangle): draw again.

	* src/ogreGui/Brush.cpp (debug): uncommented.
	* src/ogreGui/Drawable.cpp (draw): call reset() to prevent overlays
	to be hidden.
	
	* src/ogreGui/Brush.cpp : Implemented the brush's blend modes.

2010-10-16 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/OgreGuiRenderQueueListener : Implemented.

	* src/ogreGui/Container.cpp (draw): draws all its childs.
	
	* src/ogreGui/Drawable.cpp (draw): basic implementation.
	
	* src/ogreGui/Window.cpp (Window): Constructor load skinnable texture.
	
2010-09-07 Jerome Pasquier  <rainbru@free.fr>

	* src/client/: Removed ambiguities for Window in some files.
	
	* src/client/gsmainmenu.cpp: Can now be built with new OgreGui.
	* src/client/gsserverlist.cpp: Can now be built with new OgreGui.
	* src/client/gscreateaccount.cpp: Can now be built with new OgreGui.


2010-09-04 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsconnection.cpp: Can now be built with new OgreGui but 
	need some ugly hack for BetaGUI::Button.
	* src/client/gsmainmenu.cpp: Can now be built with new OgreGui.

2010-08-22 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmainmenu.cpp: Trying to fix name conflict with oldOgreGui
	and OgreGui to test drawing implementation.

2010-08-21 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Window.cpp: Base implementation.
	* src/ogreGui/Window.hpp: Base implementation.
	
2010-08-17 Jerome Pasquier  <rainbru@free.fr>

	* src/tests/ogreGui/DrawableTestWithOgre: Contains Ogre-based unit tests.
	