@@ -30,20 +30,35 @@
      </tr>
      
 <!-- Add here a version when it is finished (when switching to Ver++) -->
-     <tr class="regTest2">
+     <tr class="regTest1">
        <td>v0.0.5-205</td>                        <!-- Version -->
-       <td>16 oct 2010</td>                       <!-- Date -->
-       <td align="right">41&nbsp;316</td>         <!-- SLOC -->
+       <td>28 oct 2010</td>                       <!-- Date -->
+       <td align="right">41&nbsp;501</td>         <!-- SLOC -->
        <td align="right">13</td>                  <!-- Console count -->
        <td>250</td>                               <!-- Unit tests -->
        <td>OK</td>                                <!-- Linux -->
        <td><font color="red">No</font></td>       <!-- Win32 -->
        <td>-</td>                                 <!-- Mem on win32 -->
-       <td>2&nbsp;093</td>                        <!-- Doc pages -->
-       <td>385</td>                               <!-- ChangeLog lines -->
+       <td>2&nbsp;259</td>                        <!-- Doc pages -->
+       <td>420</td>                               <!-- ChangeLog lines -->
        <td>416</td>                               <!-- Number of PO msg -->
-       <td>OgreGui's drawing implemenattion.</td> <!-- Comment -->
+       <td>Some work on Win32 building.</td>      <!-- Comment -->
        <td><font color="red">Failed</font></td>   <!-- Unit tests result -->
+     </tr>
+     <tr class="regTest2">
+       <td>v0.0.5-205</td>
+       <td>16 oct 2010</td>
+       <td align="right">41&nbsp;316</td>
+       <td align="right">13</td>
+       <td>250</td>
+       <td>OK</td>
+       <td><font color="red">No</font></td>
+       <td>-</td>
+       <td>2&nbsp;093</td>
+       <td>385</td>
+       <td>416</td>
+       <td>OgreGui's drawing implemenattion.</td>
+       <td><font color="red">Failed</font></td>
      </tr>
      <tr class="regTest1">
        <td>v0.0.5-204</td>
