@@ -85,5 +85,5 @@ librainbrurpg_core_la_LDFLAGS=				\
 
 
 dll:
-	source ../create_dll.sh &&		\
-	run "rainbrurpg-core" "-L/usr/cross/lib/ -lgnet-2.0 -lgd -lsigc-2.0 -lglib-2.0 -lenet -lboost_thread-1_34_1 -lboost_filesystem-1_34_1 -lFOX-1.6  -lcurl -L../../common/.libs/ -lrainbrurpg-common -lOgreMain -lfreetype6 -lfreeimage -lzzip -lOIS -lintl"
+	source ../../create_dll.sh &&		\
+	run "rainbrurpg-core" "-L/usr/cross/lib/ -lgnet-2.0 -lgd -lsigc-2.0 -lglib-2.0 -lenet -lboost_thread-1_34_1 -lboost_filesystem-1_34_1.dll -lFOX-1.6  -lcurl -L../../common/.libs/ -L../../ogreGui/.libs/ -lrainbrurpg-ogregui -lrainbrurpg-common -lOgreMain -lfreetype6 -lfreeimage -lzzip -lOIS -lintl"
